agregado de CSS

--- a/index.html
+++ b/index.html
@@ -1,56 +1,94 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Mi portafolio personal</title>
-    </head>
-    <body>
-        <header>
-            <h1>Isaias Figueredo</h1>
-            <h2></h2>
-        </header>
-        <main>
-            <section>
-                <h2>Acerca de mi</h2>
-                <p>
-                    Soy isaias Moises Figueredo Denis, actualmente iniciando mi carrera de desarrollado
-                    con leves proyecto pero implementando mi pacion y exfuerzo para dar mi mejor desempeño
-                    a aprender y seguir mejorando, mientras busco oportunidanes para implementar y ayudar
-                    con mi experiencia.
-                </p>
-            </section>
-            <section>
-                <h2>Habilidades</h2>
-                <ul>
-                    <li>HTML</li>
-                    <li>administrador wed</li>
-                </ul>
-            </section>
-            <section>
-                <h2>Experiencias</h2>
-                <ul>
-                    <li>
-                        Asnef.online
-                        <ul>
-                            <li>2023-presente</li>
-                        </ul>
-                    </li>
-                </ul>
-            </section>
-        </main>
-        <footer>
-            <h2>Contactos</h2>
+  <head>
+    <title>Mi portafolio personal</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <a class="menu-item" href="#acerca-de-mi">Acerca de mí</a>
+          <a class="menu-item" href="#habilidades">Habilidades</a>
+          <a class="menu-item" href="#experiencia">Experiencia</a>
+          <a class="menu-item" href="#proyectos">Proyectos</a>
+          <a class="menu-item" href="#contacto">Contacto</a>
+        </ul>
+      </nav>
+      <h1>Isaias Figueredo</h1>
+      <h2>Administrador wed</h2>
+    </header>
+    <main>
+      <section id="acerca-de-mi">
+        <h2>Acerca de mí</h2>
+        <p>
+            Soy isaias Moises Figueredo Denis, actualmente iniciando mi carrera de desarrollado
+            con leves proyecto pero implementando mi pacion y exfuerzo para dar mi mejor desempeño
+            a aprender y seguir mejorando, mientras busco oportunidanes para implementar y ayudar
+            con mi experiencia.
+        </p>
+      </section>
+      <section id="habilidades">
+        <h2>Habilidades</h2>
+        <ul>
+          <li>HTML</li>
+          <li>administrador wed</li>
+        </ul>
+      </section>
+      <section id="experiencia">
+        <h2>Experiencia</h2>
+        <ul>
+          <li>
+            <b>Asnef.online</b> (2023-presente)
             <ul>
-                <li>Telefono: 0975617820</li>
-                <li>Correo: isaiasfigueredo2005@gmail.com</li>
-                <li>
-                    Redes Sociales:
-                    <ul>
-                        <li>
-                            <a href="https://www.instagram.com/isaia__f/">Intagram</a>
-                        </li>
-                    </ul>
-                </li>
+              <li>Administrador Wed</li>
+              <li>
+                Responsable de la administracion de envios de 
+                informe y ventas online
+              </li>
             </ul>
-        </footer>
-    </body>
+          </li>
+        </ul>
+      </section>
+      <section id="proyectos">
+        <h2>Proyectos</h2>
+        <ul>
+          <li>
+            <a href=""
+              >Clon de Wordle</a
+            >
+            <p>Descripción del proyecto 1</p>
+          </li>
+          <li>
+            <a href=""
+              >Proyecto 2</a
+            >
+            <p>Descripción del proyecto 2</p>
+          </li>
+        </ul>
+      </section>
+      <section id="contacto">
+        <h2>Contacto</h2>
+        <ul>
+          <li>Email: isaiasfigueredo2005@gmail.com</li>
+          <li>Telefono: 0975617820</li>
+          <li>
+            Redes Sociales:
+            <ul>
+              <li>
+                <a href="https://www.instagram.com/isaia__f/" class="fa fa-instagram"></a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <p>Isaias &copy; 2024</p>
+    </footer>
+  </body>
 </html>
